; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/score/kernel/extr_time.c_score_timer_set_next_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/score/kernel/extr_time.c_score_timer_set_next_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@TMR_M_PERIODIC = common dso_local global i64 0, align 8
@TMR_IE_ENABLE = common dso_local global i64 0, align 8
@P_TIMER0_CTRL = common dso_local global i32 0, align 4
@P_TIMER0_PRELOAD = common dso_local global i32 0, align 4
@TMR_ENABLE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.clock_event_device*)* @score_timer_set_next_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @score_timer_set_next_event(i64 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.clock_event_device*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %5 = load i64, i64* @TMR_M_PERIODIC, align 8
  %6 = load i64, i64* @TMR_IE_ENABLE, align 8
  %7 = or i64 %5, %6
  %8 = load i32, i32* @P_TIMER0_CTRL, align 4
  %9 = call i32 @outl(i64 %7, i32 %8)
  %10 = load i64, i64* %3, align 8
  %11 = load i32, i32* @P_TIMER0_PRELOAD, align 4
  %12 = call i32 @outl(i64 %10, i32 %11)
  %13 = load i32, i32* @P_TIMER0_CTRL, align 4
  %14 = call i64 @inl(i32 %13)
  %15 = load i64, i64* @TMR_ENABLE, align 8
  %16 = or i64 %14, %15
  %17 = load i32, i32* @P_TIMER0_CTRL, align 4
  %18 = call i32 @outl(i64 %16, i32 %17)
  ret i32 0
}

declare dso_local i32 @outl(i64, i32) #1

declare dso_local i64 @inl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
